# PacMan3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  game.json
assets/: configuration.json
assets/configurations/: configuration.json
assets/game/: game.json
assets/games/: game.json  gameRealBoard.json
glimac/: CMakeLists.txt
glimac/include/glimac/: FreeflyCamera.hpp  TrackballCamera.hpp
glimac/src/: FreeflyCamera.cpp  TrackballCamera.cpp
include/: AbstractModel.h  AbstractModel3D.h  Board.h  BoardPosition.h  BoardRepresentation.h  BoardSquare.h  Bonus.h  Camera.h  ColorText2D.h  ColorText2DRenderer.h  Configuration.h  ConstantStrings.h  DirectionalLight.h  DistanceMap.h  Door.h  EventHandler.h  EventHandler.hpp  Floor.h  FreeflyCamera.h  FreeflyCamera.hpp  Fruit.h  Game.h  GameInformations.h  GameRepresentation.h  Ghost.h  GhostBlinky.h  GhostClyde.h  GhostInky.h  GhostPinky.h  Light.h  LightTexModel3D.h  Material.h  Mesh.h  Model3D.h  Model3DNormal.h  Model3DTex.h  NormalModel3D.h  PacGomme.h  Pacman.h  PointOfView.h  (+23 more)
pythonScript/: generateMap.py
shaders/: 3D.vs.glsl  lightTex3D.fs.glsl  lightning.fs.glsl  normal.fs.glsl  normal3D.fs.glsl  tex3D.fs.glsl  text2D.fs.glsl  text2D.vs.glsl  triangle.vs.glsl
src/: AbstractModel.cpp  AbstractModel3D.cpp  Board.cpp  BoardPosition.cpp  BoardRepresentation.cpp  BoardSquare.cpp  Bonus.cpp  ColorText2D.cpp  ColorText2DRenderer.cpp  Configuration.cpp  DirectionalLight.cpp  DistanceMap.cpp  Door.cpp  EventHandler.cpp  Floor.cpp  FreeflyCamera.cpp  Fruit.cpp  Game.cpp  GameInformations.cpp  GameRepresentation.cpp  Ghost.cpp  GhostBlinky.cpp  GhostClyde.cpp  GhostInky.cpp  GhostPinky.cpp  Light.cpp  LightTexModel3D.cpp  Material.cpp  Mesh.cpp  Model3D.cpp  Model3DNormal.cpp  Model3DTex.cpp  NormalModel3D.cpp  PacGomme.cpp  Pacman.cpp  PointOfView.cpp  Renderer3D.cpp  SpotLight.cpp  SuperPacGomme.cpp  TexModel3D.cpp  (+15 more)
